# MLBitcoinAnalis

./: main.py  pyproject.toml  test.py
data/: BTC-USD.csv  ETH-USD.csv  bitcoin (2).csv
